--- a/src/style.scss
+++ b/src/style.scss
@@ -40,70 +40,73 @@ li {
 }
 
 // Checkbox help from https://www.digitalocean.com/community/tutorials/react-react-burger-menu-sidebar
-/* Individual item */
-.bm-item {
-    display: inline-block;
-  
-    /* Our sidebar item styling */
-    text-decoration: none;
-    margin-bottom: 10px;
-    color: #d1d1d1;
-    transition: color 0.2s;
-  }
-  
-  /* Change color on hover */
-  .bm-item:hover {
-    color: rgb(30, 202, 152);
-  }
-  
-  /* The rest copied directly from react-burger-menu docs */
-  
-  /* Position and sizing of burger button */
-  .bm-burger-button {
-    position: fixed;
-    width: 36px;
-    height: 30px;
-    left: 36px;
-    top: 36px;
-  }
-  
-  /* Color/shape of burger icon bars */
-  .bm-burger-bars {
-    background: #ffffff;
-  }
-  
-  /* Position and sizing of clickable cross button */
-  .bm-cross-button {
-    height: 24px;
-    width: 24px;
-  }
-  
-  /* Color/shape of close button cross */
-  .bm-cross {
-    background: #bdc3c7;
-  }
-  
-  /* General sidebar styles */
-  .bm-menu {
-    background: #000000;
-    padding: 2.5em 1.5em 0;
-    font-size: 1.15em;
-  }
-  
-  /* Morph shape necessary with bubble or elastic */
-  .bm-morph-shape {
-    fill: #373a47;
-  }
-  
-  /* Wrapper for item list */
-  .bm-item-list {
-    color: #fce91f;
-  }
-  
-  /* Styling of overlay */
-  .bm-overlay {
-    background: rgba(0, 0, 0, 0.3);
-  }
+/* Position and sizing of burger button */
+// .bm-burger-button {
+//   position: fixed;
+//   width: 52px;
+//   height: 30px;
+//   right: 5vw;
+//   // bottom: 0;
+//   top: 72px;
+// }
+
+// /* Color/shape of burger icon bars */
+// .bm-burger-bars {
+//   background: rgba(34, 32, 28, 1)
+// }
+
+// /* Color/shape of burger icon bars on hover*/
+// .bm-burger-bars-hover {
+//   background: #a90000;
+// }
+
+// /* Position and sizing of clickable cross button */
+// .bm-cross-button {
+//   height: 24px;
+//   width: 24px;
+// }
+
+// /* Color/shape of close button cross */
+// .bm-cross {
+//   background: #000000;
+// }
+
+// /*
+// Sidebar wrapper styles
+// Note: Beware of modifying this element as it can break the animations - you should not need to touch it in most cases
+// */
+// .bm-menu-wrap {
+//   position: fixed;
+//   height: 100%;
+// }
+
+// /* General sidebar styles */
+// .bm-menu {
+//   background: #373a47;
+//   padding: 2.5em 1.5em 0;
+//   font-size: 1.15em;
+// }
+
+// /* Morph shape necessary with bubble or elastic */
+// .bm-morph-shape {
+//   fill: #373a47;
+// }
+
+// /* Wrapper for item list */
+// .bm-item-list {
+//   color: #b8b7ad;
+//   padding: 0.8em;
+// }
+
+// /* Individual item */
+// .bm-item {
+//   display: inline-block;
+// }
+
+// /* Styling of overlay */
+// .bm-overlay {
+//   background: rgb(255, 255, 255);
+// }
 
 
 .switch{
@@ -132,4 +135,20 @@ width: 30%;
 
 .emoji {
     color: rgb(30, 202, 152);
+}
+
+.header-link {
+  font-family: 'Canela';
+  font-weight: 250px;
+  font-size: 20px;
+  color: rgba(64, 46, 46, 1);
+  text-decoration: none;
+}
+
+.header-link:hover {
+  text-decoration: underline;
+}
+
+.activeL {
+  text-decoration: underline;
 }
